--- a/src/templates/core/faculty/realtime.html
+++ b/src/templates/core/faculty/realtime.html
@@ -5,45 +5,26 @@
 {% endblock %}
 
 {% block body %}
-
-<style>
-    
-    @media (max-width: 767px) {
-        .table-responsive {
-            overflow-x: auto;
-        }
-
-        .table thead {
-            display: none;
-        }
-
-        .table tbody tr {
-            display: block;
-            margin-bottom: 20px;
-            border: 3px solid #800000;
-            border-radius: 10px;
-            padding: 10px;
-            background-color: #f9f9f9;
-        }
-
-        .table tbody td {
-            display: block;
-            text-align: left; 
-        }
-    }
-</style>
-
 <div class="d-flex align-items-center justify-content-between mb-4">
-    <h1 class="h3" style="margin-top: 15px;"><strong>Real Time Attendance</strong></h1>
-    <hr>
+    <h1 class="h3"><strong> Real Time Attendance</strong></h1>
     <div class="input-group" style="width: 25%;">
         <input type="text" class="form-control" id="search-input" placeholder="Search.." aria-label="Search" aria-describedby="search-button" 
-        style="margin-top: 15px; border-color: black;">
+        style="margin-top: 15px;  
+        border-color: black;" >
     </div>
 </div>
 
-<div class="table-responsive" style="margin-top: 10px;">
-    <table class="table table-bordered table-striped p-0 m-0">
+<div class="table-responsive" style="overflow-x: auto;">
+    <table class="table datatables table-bordered table-condensed table-striped p-0 m-0" style="width: 100%; border: 1px solid #696969; border-radius: 10px;">
+        <thead>
+            <tr role="row">
+                <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Surname</th>
+                <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Given Name</th>
+                <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Section</th>
+                <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Date & Time</th>
+                <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Status</th>
+            </tr>
+        </thead>
         <tbody>
             {% for au in attendance_user %}
             <tr role="row" style="background-color: #f9f9f9;">
