--- a/src/templates/core/faculty/classlist_details.html
+++ b/src/templates/core/faculty/classlist_details.html
@@ -4,46 +4,38 @@
 
 <h1 class="h3 mb-4"><strong>Class List Details</strong></h1>
 
-<a href="{{ url_for('core.classlist') }}" class="btn btn-primary">Back to Class List</a>
-
 <!-- Display class list entry details -->
 <div class="row">
     <div class="col-auto">
         <h4>{{ classlist_entry.subject_name }} - {{ classlist_entry.section_code }}</h4>
         <p>School Year: {{ classlist_entry.school_year }}</p>
-        <p>Semester: {{ classlist_entry.semester }}</p>
+        <p>Semester: {{ classlist_entry.semester.value }}</p>
     </div>
 </div>
 
-<!-- Display associated users -->
-<div class="row mt-4">
-    <div class="col-auto">
-        <h4>Associated Users</h4>
-        <table>
-            <thead>
-                <tr>
-                    <th>User ID</th>
-                    <th>User First Name</th>
-                    <th>User Last Name</th>
-                    <th>User Email</th>
-                    <!-- Add more columns based on your User model -->
-                </tr>
-            </thead>
-            <tbody>
-                {% for user in users %}
-                    <tr>
+<div class="table-responsive">
+    <table class="table datatables table-bordered table-condensed table-striped p-0 m-0 dataTable no-footer dtr-inline" id="DataTables_Table_0" role="grid" aria-describedby="DataTables_Table_0_info" style="width: 100%; border: 1px solid #696969; border-radius: 10px;">
+        <thead>
+            <tr role="row">
+                <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">User ID</th>
+                <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">First Name</th>
+                <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Middle Name</th>
+                <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Last Name</th>
+                <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Email</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for user in users %}
+                <tr role="row" style="background-color: #f9f9f9;">
                         <td>{{ user.id }}</td>
                         <td>{{ user.first_name }}</td>
+                        <td>{{ user.middle_name }}</td>
                         <td>{{ user.last_name }}</td>
                         <td>{{ user.email }}</td>
-                        <!-- Add more columns based on your User model -->
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </div>
-
-<!-- Add additional details as needed -->
 
 {% endblock %}
