--- a/src/templates/core/faculty/classlist.html
+++ b/src/templates/core/faculty/classlist.html
@@ -1,4 +1,4 @@
-{% extends "core/faculty/sidebar.html" %}
+{% extends "core/sidebar.html" %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 {% block body %}
