--- a/src/templates/_base.html
+++ b/src/templates/_base.html
@@ -16,9 +16,9 @@
       @import url("../static/css/fonts.css");
     </style>
     <!-- scripts -->
-    <script defer src="..\static\js\jquery-3.7.1.min.js"></script>
+    <script src="..\static\js\jquery-3.7.1.min.js"></script>
     <!-- JavaScript Bundle with Popper -->
-    <script defer src="..\static\js\bootstrap.bundle.min.js"></script>
+    <script src="..\static\js\bootstrap.bundle.min.js"></script>
     {% block header %}{% endblock %}
   </head>
   <body>
