--- a/src/templates/core/faculty/index.html
+++ b/src/templates/core/faculty/index.html
@@ -55,7 +55,10 @@
                 <td>{{ classlist.section_code }}</td>
                 <td>{{ classlist.subject_name }}</td>
                 <td>
-                    <button class="btn btn-link btn-sm custom-btn" style="background-color: #800000; color: white; outline: 2px solid #800000; padding: 2px 15px; font-family: roboto; " onclick="downloadAction('{{ classlist.id }}', '{{ classlist.subject }}', '{{ classlist.section }}')">Download</button>
+                    <button class="btn btn-link btn-sm custom-btn"
+                    style="background-color: #800000; color: white; outline: 2px solid #800000; padding: 2px 15px; font-family: roboto; "
+                    onclick="downloadAction('{{ classlist.id }}', '{{ classlist.subject_name }}', '{{ classlist.section_code }}', '{{ classlist.school_year }}', '{{ classlist.semester.value }}')">
+                    Download</button>
                 </td>
             </tr>
             {% endfor %}
@@ -99,7 +102,7 @@
         });
     }
 
-    function downloadAction(classlist_id, subject, section) {
+    function downloadAction(classlist_id, classlist_subject, classlist_section, classlist_school_year, classlist_semester) {
         console.log(classlist_id);  
         $.ajax({
             url: `/export_attendance_csv?classlist_id=${classlist_id}`,
@@ -108,18 +111,19 @@
                 responseType: 'blob' // Set the expected response type to blob
             },
             success: function (data) {
+                console.log('WTF' + classlist_id + classlist_subject + classlist_section)
                 var a = document.createElement('a');
                 var url = window.URL.createObjectURL(data);
                 a.href = url;
-                a.download = `attendance_records_${subject}_${section}.csv`;
+                a.download = `attendance_report_[${classlist_school_year}_${classlist_semester} Semester]_${classlist_subject}_${classlist_section}.csv`;
                 document.body.append(a);
                 a.click();
                 a.remove();
                 window.URL.revokeObjectURL(url);
             },
             error: function (xhr, status, error) {
-                console.error(`Error downloading attendance records for subject ${subject} and section ${section}:`, error);
-                alert(`Failed to download attendance records for subject ${subject} and section ${section}. Please try again later.`);
+                console.error(`Error downloading attendance records for subject ${classlist_subject} and section $classlist_{section}:`, error);
+                alert(`Failed to download attendance records for subject ${classlist_subject} and section ${classlist_section}. Please try again later.`);
             }
         });
     }
