--- a/src/templates/core/faculty/qrscanner.html
+++ b/src/templates/core/faculty/qrscanner.html
@@ -28,7 +28,7 @@
     <div class="d-flex justify-content-center">
         <div class="col-md-6 col-lg-3 mb-3">
             <select id="classlistDropdown" class="form-select" style="height: 35px; background-color: #f0f0f0; color: black;">
-                <option selected>Select Classlist</option>
+                <option selected>Select Class List</option>
                 {% for classlist in classlists %}
                     <option value="{{ classlist.id }}">{{ classlist.subject_name }} {{ classlist.section_code }}</option>
                 {% endfor %}
