--- a/src/templates/core/faculty/records.html
+++ b/src/templates/core/faculty/records.html
@@ -2,8 +2,19 @@
 
 {% block body %}
 
-<div class="d-flex align-items-center justify-content-between mb-4">
+<div class="text-center">
     <h1 class="h3"><strong> Student Records</strong></h1>
+</div>
+<div class="d-flex align-items-center justify-content-between mb-4">
+    <div class="col-md-6 col-lg-3 mb-3">
+        <select id="selectClassList" class="form-select" style="height: 35px; background-color: #f0f0f0; color: black;">
+            <option selected>Select Class List</option>
+            {% for classlist in classlists %}
+                <option value="{{ classlist.id }}">{{ classlist.subject_name }} {{ classlist.section_code }}</option>
+            {% endfor %}
+        </select>
+    </div>
+
     <div class="input-group" style="width: 25%;">
         <input type="text" class="form-control" id="search-input" onkeyup="searchFunction()" placeholder="Search.." aria-label="Search" aria-describedby="search-button" style="margin-top: 15px; border-color: black;">
     </div>
@@ -16,7 +27,7 @@
                 <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Surname</th>
                 <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Given Name</th>
                 <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Middle Name</th>
-                <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Section</th>
+                <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Class List</th>
                 <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Present</th>
                 <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Late</th>
                 <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Absent</th>
@@ -28,7 +39,7 @@
                 <td>{{ s.last_name }}</td>
                 <td>{{ s.first_name }}</td>
                 <td>{{ s.middle_name }}</td>
-                <td>{{ s.section_code }}</td>
+                <td>{{ s.subject_name }} {{ s.section_code }}</td>
                 <td>{{ s.present_count }}</td>
                 <td>{{ s.late_count }}</td>
                 <td>{{ s.absent_count }}</td>
@@ -45,7 +56,7 @@
             <h5 class="mb-0">{{ s.last_name }}, {{ s.first_name }} {{ s.middle_name }}</h5>
         </div>
         <div class="card-body" style="display: none;">
-            <p><strong>Section:</strong> {{ s.section_code }}</p>
+            <p><strong>Class List:</strong> {{ s.subject_name }} {{ s.section_code }}</p>
             <p><strong>Present:</strong> {{ s.present_count }}</p>
             <p><strong>Late:</strong> {{ s.late_count }}</p>
             <p><strong>Absent:</strong> {{ s.absent_count }}</p>
