--- a/src/templates/core/faculty/index.html
+++ b/src/templates/core/faculty/index.html
@@ -5,7 +5,10 @@
 {% endblock %}
 
 {% block body %}
-<h1 class="h3 mb-4" style="margin-top: 15px;"><strong> Dashboard</strong></h1>
+<div class="text-center">
+    <h1 class="h3 mb-4" style="margin-top: 15px;"><strong> Dashboard</strong></h1>
+</div>
+
 
 <div class="row justify-content-center">
     <div class="col-md-4">
